Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 "version": "2.2.5",
 "description": "WhatsApp Bot Multi Device",
 "main": "index.js",
-"type": "module",
+"type": "module"
 "directories": {
 "lib": "lib",
 "media": "media",
