--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
 "boxen": "^7.1.1",
 "groq-sdk": "latest",
 "chalk": "^5.1.0",
-"sanzy-spotifydl": "",
+"sanzy-spotifydl": "*",
 "url-file-size": "^1.0.5-1",
-"fluid-spotify.js": "",
+"fluid-spotify.js": "*",
 "cheerio": "npm:cheerio@1.0.0-rc.12",
 "express": "^4.18.1",
 "file-type": "^18.0.0",
@@ -101,7 +101,6 @@
 "mime-types": "^2.1.35",
 "api-dylux": "^1.7.2",
 "yargs": "^17.3.1"
-"xmldom": "^0.8.10"
 },
 "optionalDependencies": {
 "wa-sticker-formatter": "^4.3.2",
