--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
 "eslint": "eslint .",
 "eslintfix": "eslint --fix ."
 },
-"homepage": "https://github.com/Shadows-Club/JotaBot",
+"homepage": "https://github.com/Shadows-Club/Kaiser",
 "author": {
 "name": "Criss.xyz"
 },
 "repository": {
 "type": "git",
-"url": "git+https://github.com/Shadows-Club/JotaBot.git"
+"url": "git+https://github.com/Shadows-Club/Kaiser.git"
 },
 "bugs": {
-"url": "https://github.com/Shadows-Club/JotaBot/issues"
+"url": "https://github.com/Shadows-Club/Kaiser/issues"
 },
 "license": "GPL-3.0-or-later",
 "dependencies": {
