--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-"name": "KaiserBot",
-"version": "1.5.0",
+"name": "MorchiBot",
+"version": "2.5.0",
 "description": "WhatsApp Bot Multi Device",
 "main": "main.js",
 "type": "module",
