--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 "name": "MorchiBot",
 "version": "2.5.0",
 "description": "WhatsApp Bot Multi Device",
-"main": "main.js",
+"index": "index.js",
 "type": "module",
 "directories": {
 "lib": "lib",
@@ -10,11 +10,11 @@
 "plugins": "plugins"
 },
 "scripts": {
-"start": "node main.js",
-"qr": "main.js qr",
-"code": "main.js code",
+"start": "node index.js",
+"qr": "index.js qr",
+"code": "index.js code",
 "test": "node test.js",
-"test2": "nodemon main.js",
+"test2": "nodemon index.js",
 "eslint": "eslint .",
 "eslintfix": "eslint --fix ."
 },
