--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 "@bochilteam/scraper-sosmed": "^1.0.5",
 "@xct007/frieren-scraper": "^0.0.2",
 "awesome-phonenumber": "^3.4.0",
+"imagemaker.js": "^2.0.4",
 "ruhend-scraper": "^7.0.4",
 "gradient-string": "^2.0.2",
 "axios": "^1.1.2",
